--- a/styles/constants/_z-indexes.scss
+++ b/styles/constants/_z-indexes.scss
@@ -1,6 +1,5 @@
 $overlay-level: 10;
-$my-menu-level: 10;
 $search-history-level: 10;
-$side-gnb-header-level: 10;
 $search-modal-level: 20;
-$side-gnb-level: 30;
+$global-header-level: 20;
+$side-gnb-level: 20;
