--- a/styles/layouts/_side-gnb.scss
+++ b/styles/layouts/_side-gnb.scss
@@ -4,7 +4,7 @@ $side-gnb-width: 250px;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: $side-gnb-header-level;
+  z-index: $side-gnb-level;
   width: $side-gnb-width;
   height: 100vh;
   padding: 0 10px;
@@ -28,7 +28,7 @@ $side-gnb-width: 250px;
     left: 20px;
     width: 250px;
     height: 70px;
-    z-index: $side-gnb-header-level;
+    z-index: $side-gnb-level;
     background-color: $white;
 
     .logo {
